Changed directory structure

--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -11,8 +11,8 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
-                    ./jenkins/build/mvn.sh mvn -B -DskipTests clean package
-                    ./jenkins/build/build.sh
+                    ./pipeline/jenkins/build/mvn.sh mvn -B -DskipTests clean package
+                    ./pipeline/jenkins/build/build.sh
 
                 '''
             }
@@ -26,7 +26,7 @@ pipeline {
 
         stage('Test') {
             steps {
-                sh './jenkins/test/mvn.sh mvn test'
+                sh './pipeline/jenkins/test/mvn.sh mvn test'
             }
 
             post {
@@ -38,13 +38,13 @@ pipeline {
 
         stage('Push') {
             steps {
-                sh './jenkins/push/push.sh'
+                sh './pipeline/jenkins/push/push.sh'
             }
         }
 
         stage('Deploy') {
             steps {
-                sh './jenkins/deploy/deploy.sh'
+                sh './pipeline/jenkins/deploy/deploy.sh'
             }
         }
     }
