--- a/pipeline/Jenkinsfile
+++ b/pipeline/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
 
             post {
                 success {
-                   archiveArtifacts artifacts: 'java-app/target/*.jar', fingerprint: true
+                   archiveArtifacts artifacts: 'pipeline/java-app/target/*.jar', fingerprint: true
                 }
             }
         }
@@ -31,7 +31,7 @@ pipeline {
 
             post {
                 always {
-                    junit 'java-app/target/surefire-reports/*.xml'
+                    junit 'pipeline/java-app/target/surefire-reports/*.xml'
                 }
             }
         }
