--- a/pipeline/java-app/pom.xml
+++ b/pipeline/java-app/pom.xml
@@ -81,13 +81,6 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-plugin</artifactId>
-			<configuration>
-    		<testFailureIgnore>true</testFailureIgnore>
-			</configuration>
-		</plugin>
 	</dependencies>
 
 	<build>
@@ -102,12 +95,19 @@
 					<manifest>
 					<addClasspath>true</addClasspath>
 					<classpathPrefix>lib/</classpathPrefix>
-					<mainClass>com.mycompany.app.App</mainClass>
+					<mainClass>com.sujumayas.clientsmicroservice.ClientServiceApplication</mainClass>
 					</manifest>
 				</archive>
 				</configuration>
 			</plugin>
-			</plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+				<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
