--- a/pipeline/java-app/pom.xml
+++ b/pipeline/java-app/pom.xml
@@ -84,6 +84,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- This is supposed to fix 1of3 fails on tests ? -->
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
 		</plugins>
 	</build>
 
